# vinyl-management-system

./: .dockerignore  .env.template  .gitignore  AGENTS.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB.md  README.md  debug_abbrev.py  debug_preprocessor.py  debug_test_config.py  pyproject.toml  requirements.txt
DDS Group Project/: Dockerfile  Makefile  docker-compose.yml  main.py  migrate_collections.py  pyproject.toml  recommender.py  setup_gcp.sh  spotify.py  spotify_add_refresh_token.sh  spotify_notebook.ipynb
DDS Group Project/config/: airflow.cfg
DDS Group Project/dags/: batch_recommend.py  example_dag.py  load_music_data.py  load_spark.py  mongodb_dag.py  recommend_for_user.py  scrape_new_albums.py  scrape_ratings.py  spotify_token_healthcheck.py  train_mf.py
DDS Group Project/db/: mongo.py
DDS Group Project/setup/: Dockerfile  init.sh
DDS Group Project/spark/: Dockerfile
DDS Group Project/tests/: test_recommender.py  test_spotify.py
core/: __init__.py  auth.py  config.py  jobs.py  pyproject.toml
grader/: Dockerfile  README.md  __init__.py  pyproject.toml  pyrightconfig.json
grader/configs/: default_promo_noise_phrases.json  grader.yaml  grading_guidelines.yaml  transformer_tune.yaml
grader/demo/: README.md  golden_loader.py  golden_predict_demo.json  golden_predict_demo_pitch.json
grader/docs/benchmarks/: README.md
grader/docs/label_audit/: README.md
grader/reports/: rule_engine_baseline.json
grader/scripts/: README.md  bench_infer.py  bench_ingest_smoke.py
grader/serving/: README.md  __init__.py  guidelines_pairing.py  main.py  model_loader.py  rule_postprocess.py  schemas.py
grader/src/: config_io.py  guidelines_identity.py  mlflow_tracking.py  pipeline.py  pipeline_train_steps.py  project_env.py
grader/src/data/: harmonize_labels.py  ingest_discogs.py  ingest_discogs_release_marketplace.py  ingest_ebay.py  ingest_sale_history.py  label_patches.py  preprocess.py  vinyl_format.py
grader/src/eval/: __init__.py  analyze_harmful_overrides.py  analyze_missed_rule_owned.py  (+19 more)
grader/tests/: conftest.py  smoke_test.py  test_baseline.py  test_cleanlab_label_audit.py  test_config_io.py  test_demo_golden_predict.py  test_diff_rule_engine_baseline.py  test_generate_relabel_review_csv.py  test_grade_analysis.py  test_grade_analysis_slice.py  test_grader_pyfunc_temperature.py  test_guidelines.py  test_guidelines_baseline_pairing.py  test_harmonize.py  test_ingest_discogs.py  test_ingest_ebay.py  test_ingest_sale_history.py  test_label_audit_backend.py  test_label_audit_calibrate_policy.py  test_label_audit_critic.py  test_label_patches.py  test_metrics.py  test_monitoring_nlp.py  test_pipeline.py  test_preprocess.py  test_rule_engine.py  test_rule_postprocess.py  test_serving_health.py  test_serving_predict_contract.py  test_serving_schemas.py  test_tfidf_features.py  test_vinyl_format.py
price_estimator/: AGENTS.md  Dockerfile  README.md  __init__.py  pyproject.toml  vinyliq_project_plan.md
price_estimator/configs/: base.yaml
price_estimator/scripts/: audit_ps_ladder_guardrails.py  audit_training_db_joins.py  backfill_feature_store_community.py  build_feature_store.py  build_stats_collection_queue.py  collect_discogs_release_listings_botasaurus.py  collect_discogs_search_release_ids_botasaurus.py  collect_marketplace_stats.py  collect_sale_history_botasaurus.py  export_grader_release_scrape_queue.py  export_recommender_grader_release_ids.py  export_release_ids.py  export_releases_features_parquet.py  fetch_discogs_popular_release_ids.py  finalize_sale_history_usd_strings.py  fit_grade_delta_scale.py  ingest_discogs_dump.py  ingest_discogs_masters_dump.py  ingest_from_discogs.py  inspect_num_for_sale.py  inspect_queue_popularity.py  inspect_training_label.py  merge_sqlite_sources.py  populate_demo_golden_discogs.py  qa_sale_floor_labels_by_format.py  report_feature_store_community.py  report_grader_release_listings_pilot.py  seed_demo_data.py  sqlite_to_cloudsql_loader.py  worst_holdout_predictions.py
price_estimator/src/: __init__.py  catalog_proxy.py  mlflow_tracking.py  pipeline.py
price_estimator/tests/: conftest.py  residual_baseline_fixtures.py  test_catalog_encoder_cap.py  test_catalog_proxy_queue.py  test_confidence_interval_unit.py  test_discogs_dump.py  test_discogs_release_listings_parse.py  test_discogs_sale_history_parse.py  test_discogs_search_release_ids.py  test_ensemble_blend_config.py  test_estimate_api_contract.py  test_feature_pipeline_fixtures.py  test_fitted_regressor.py  test_format_medium_flags.py  test_grade_delta_scale_fit.py  test_inference_anchor_guardrails.py  test_inference_confidence_integration.py  test_inference_fetch_stats.py  test_inference_guardrails.py  test_inference_price_suggestion_anchor.py  test_inference_yaml_runtime.py  test_label_synthesis.py  test_marketplace_inference_projection.py  test_marketplace_upsert_values.py  test_mlflow_bundle.py  test_monitoring_vinyliq.py  test_postgres_storage_import.py  test_price_api_cache.py  test_ratio_guardrails.py  test_redis_stats_cache.py  test_reference_floor_training.py  test_report_grader_release_listings_pilot.py  test_residual_reconstruction_baseline.py  test_residual_sanity_report.py  test_sale_floor_blend.py  test_sale_floor_grade_cascade.py  test_sale_history_currency.py  test_search_space.py  test_sold_nowcast_stability.py  test_train_vinyliq_selection.py  (+4 more)
recommender/: Dockerfile  README.md  __init__.py  pipeline.py  pyproject.toml
recommender/configs/: base.yaml
recommender/tests/: conftest.py  test_aoty_mongo_loader.py  test_candidate_retrieval.py  test_discogs_aoty_id_matching.py  test_dump_master_aoty_join.py  test_monitoring_recommender.py  test_preprocess.py  test_recommender_smoke.py  test_reranker.py
shared/: __init__.py  config_yaml.py  mlflow_tracking.py  project_env.py  pyproject.toml
shared/aoty/: __init__.py  loader.py  mongo_discogs_mapping.py  mongo_loader.py
shared/discogs_api/: __init__.py  client.py  oauth1.py
web/: Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt
web/app/: __init__.py  deps.py  main.py
(+336 files in other folders)
