[project]
name = "vinyl-management-system"
version = "0.1.0"
description = "Vinyl management system: Discogs integration, recommender, NLP condition classifier, price estimator, web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "implicit>=0.7.0",
    "pyyaml>=6.0",
    "mlflow>=2.9.0",
    "requests>=2.28.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "recommender*", "discogs_api*", "aoty*", "price_estimator*", "web*"]
