[project]
name = "vinyl-management-system"
version = "0.1.0"
description = "Vinyl management system: Discogs integration, recommender, vinyl condition grader, price estimator, web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core data
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    # ML
    "scikit-learn>=1.3.0",
    "implicit>=0.7.0",
    # NLP — grader
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "datasets>=2.17.0",
    "matplotlib>=3.7.0",
    "coremltools>=7.0",
    # Config and serialization
    "pyyaml>=6.0",
    # MongoDB loader (AOTY scraped data in local Mongo)
    "pymongo>=4.6.0",
    # Experiment tracking
    "mlflow>=2.9.0",
    # HTTP
    "requests>=2.28.0",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "core*",
    "recommender*",
    "shared*",
    "price_estimator*",
    "web*",
    "grader*",        # vinyl condition grader
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["grader/tests", "recommender/tests"]
# Monorepo imports (`shared`, `recommender`, `core`, …) resolve from repo root.
pythonpath = ["."]
addopts = [
    "--cov=grader/src",
    "--cov=recommender",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html:grader/reports/coverage",
    "-v",
]
# MLflow emits noisy third-party FutureWarning / DeprecationWarning in tests.
filterwarnings = [
    "ignore::FutureWarning:mlflow",
    "ignore::DeprecationWarning:mlflow",
]
markers = [
    "integration: marks tests as integration tests (run separately with -m integration)",
]
 
# Run only unit tests (fast):
#   pytest -m "not integration"
#
# Run only integration/smoke tests:
#   pytest -m integration
#
# Run all tests with coverage:
#   pytest
#
# Run a single test file:
#   pytest grader/tests/test_rule_engine.py -v
 