[project]
name = "vinyl-management-system"
version = "0.1.0"
description = "Vinyl management system: Discogs integration, recommender, vinyl condition grader, price estimator, web UI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vinyl-shared",
    "vinyl-core",
    "vinyl-grader[serve]",
    "vinyl-recommender",
    "vinyl-price-estimator",
    "vinyl-web",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    # Matches vinyl-grader[data_quality] — keeps cleanlab after `uv sync --extra test`
    # (plain `uv sync` omits optional extras and will prune it).
    "cleanlab>=2.1.0",
]

[tool.uv.workspace]
members = ["shared", "core", "grader", "recommender", "web", "price_estimator"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["repo_meta"]

[tool.pytest.ini_options]
testpaths = ["grader/tests", "recommender/tests", "price_estimator/tests"]
pythonpath = ["."]
addopts = [
    "--cov=grader/src",
    "--cov=recommender",
    "--cov=shared",
    "--cov-report=term-missing",
    "--cov-report=html:grader/reports/coverage",
    "-v",
]
filterwarnings = [
    "ignore::FutureWarning:mlflow",
    "ignore::DeprecationWarning:mlflow",
]
markers = [
    "integration: marks tests as integration tests (run separately with -m integration)",
]

[tool.uv.sources]
vinyl-shared = { workspace = true }
vinyl-core = { workspace = true }
vinyl-grader = { workspace = true }
vinyl-recommender = { workspace = true }
vinyl-price-estimator = { workspace = true }
vinyl-web = { workspace = true }

