[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinyl-grader"
version = "0.1.0"
description = "Vinyl condition grader (DistilBERT, baseline, MLflow serving)"
requires-python = ">=3.12"
dependencies = [
    "vinyl-shared",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "python-dotenv>=1.0.0",
    # Baseline pickles (LR, isotonic, LabelEncoder) are not safe across sklearn
    # minor versions — keep floor aligned with typical training env (see Colab).
    "scikit-learn>=1.8.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "matplotlib>=3.7.0",
    "coremltools>=7.0",
    "datasets>=2.17.0",
    "pyyaml>=6.0",
    "pymongo>=4.6.0",
    "mlflow>=2.9.0",
    "google-cloud-storage>=2.14.0",
    "requests>=2.28.0",
    "certifi>=2024.0.0",
]

[project.optional-dependencies]
serve = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
# Optional: train-split label-issue audit (OOF probs + Cleanlab).
data_quality = [
    "cleanlab>=2.1.0",
]
llm_assist = [
    "google-genai",
    "openai",
]
audit_ui = [
    "streamlit",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["grader*"]
[tool.uv.sources]
vinyl-shared = { workspace = true }
