[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinyl-recommender"
version = "0.1.0"
description = "Vinyl recommender (ALS, hybrid retrieval)"
requires-python = ">=3.12"
dependencies = [
    "vinyl-core",
    "vinyl-shared",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "implicit>=0.7.0",
    "pyyaml>=6.0",
    "pymongo>=4.6.0",
    "requests>=2.28.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["recommender*"]
[tool.uv.sources]
vinyl-core = { workspace = true }
vinyl-shared = { workspace = true }
