[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinyl-shared"
version = "0.1.0"
description = "Shared Discogs/AOTY helpers and project env for the vinyl monorepo"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "certifi>=2024.0.0",
    "pyyaml>=6.0",
    "pymongo>=4.6.0",
]

[tool.setuptools.package-dir]
"shared" = "."

[tool.setuptools]
packages = ["shared", "shared.discogs_api", "shared.aoty"]
