[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vinyl-web"
version = "0.1.0"
description = "FastAPI web UI: auth, ingest, ML APIs"
requires-python = ">=3.12"
dependencies = [
    "vinyl-core",
    "vinyl-shared",
    "vinyl-grader",
    "vinyl-recommender",
    "vinyl-price-estimator",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "requests>=2.28.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = [".."]
include = ["web*"]
[tool.uv.sources]
vinyl-core = { workspace = true }
vinyl-shared = { workspace = true }
vinyl-grader = { workspace = true }
vinyl-recommender = { workspace = true }
vinyl-price-estimator = { workspace = true }
